--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "cors": "^2.8.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "3.4.4"
@@ -35,5 +36,6 @@
   },
   "devDependencies": {
     "json-server": "^0.16.2"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
